--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,3 +1,4 @@
+https://docs.docker.com/engine/reference/builder/#parser-directives
 1. The "docker build" command builds an image from a Dockerfile and a context(the build's context is the set of files at a specified location PATH or URL, the PATH is a directory on your local filesystem, the URL is a Git repository location)
 2. The build is run by the Docker daemon, not by the CLI, the first thing thing is a build process is send the entire context(recursively) to the daemon(in most cases, it's best to start with an empty directory as context and keep your Dockerfile in that directory)
 3. .dockerignore
@@ -12,4 +13,9 @@ docker build -t shykes/myapp:1.0.2 -t shykes/myapp:latest .
 Docker runs instructions in a Dockfile in order, A Dockerfile must start with a 'FROM' instruction which specifies the base image
 7. Parser directives
 Parser directives are optional, and affect the way in which subsequent lines in a Dockfile are handled, Parser directives do not add layers to the build, and will not be shown as a build step, Parser directives are written as a special type of comment in the form " # directive=value ", a single directive may only be used once
+8. escape
+# escape=\ (backslash)
+or
+# escape=` (backtick)
+The escape directive sets the character used to escape characters in a Dockerfile. If not specified, the default escape character is \
 
