--- a/common/systemctl/service/ssr.service
+++ b/common/systemctl/service/ssr.service
@@ -6,8 +6,8 @@ Wants=network.target
 [Service]
 Type=forking
 PIDFile=/var/run/shadowsocksr.pid
-ExecStart=/usr/bin/python /usr/local/shadowsocksr/shadowsocks/server.py --pid-file /var/run/shadowsocksr.pid -p 46176 -k qSlzBU -m chacha20-ietf -O auth_sha1_v4 -o tls1.2_ticket_auth -d start
-ExecStop=/usr/bin/python /usr/local/shadowsocksr/shadowsocks/server.py --pid-file /var/run/shadowsocksr.pid -p 46176 -k qSlzBU -m chacha20-ietf -O auth_sha1_v4 -o tls1.2_ticket_auth -d stop
+ExecStart=/usr/bin/python /usr/local/shadowsocksr/shadowsocks/server.py --pid-file /var/run/shadowsocksr.pid -p 14901 -k password -m chacha20-ietf -O auth_sha1_v4 -o tls1.2_ticket_auth -d start
+ExecStop=/usr/bin/python /usr/local/shadowsocksr/shadowsocks/server.py --pid-file /var/run/shadowsocksr.pid -p 14901 -k password -m chacha20-ietf -O auth_sha1_v4 -o tls1.2_ticket_auth -d stop
 
 [Install]
 WantedBy=multi-user.target
