--- a/less-is-more/custom/ssr/config.json
+++ b/less-is-more/custom/ssr/config.json
@@ -2,7 +2,7 @@
     "server":"47.254.20.84",
     "server_port":46176,
     "local_port":1080,
-    "password":"qSlzBU",
+    "password":"StrongPasswd",
     "timeout":120,
     "method":"chacha20-ietf",
 	"protocol":"auth_sha1_v4",
